# Osmo-GPS-Controller-Demo

./: .gitignore  LICENSE  README.md  README_CN.md  sdkconfig
ble/: ble.c  ble.h
data/: data.c  data.h
docs/: add_camera_sleep_feature_example.md  add_camera_sleep_feature_example_CN.md  camera_sleep_example.md  camera_sleep_example_CN.md  protocol.md  protocol_CN.md
logic/: command_logic.c  command_logic.h  connect_logic.c  connect_logic.h  enum.h  enums_logic.c  enums_logic.h  gps_logic.c  gps_logic.h  key_logic.c  key_logic.h  light_logic.c  light_logic.h  logic.c  logic.h  status_logic.c  status_logic.h
main/: CMakeLists.txt  app_main.c  gattc_demo.c
protocol/: dji_protocol_data_descriptors.c  dji_protocol_data_descriptors.h  dji_protocol_data_processor.c  dji_protocol_data_processor.h  dji_protocol_data_structures.c  dji_protocol_data_structures.h  dji_protocol_parser.c  dji_protocol_parser.h
utils/: custom_crc16.c  custom_crc16.h  custom_crc32.c
utils/crc/: custom_crc16.c  custom_crc16.h  custom_crc32.c  custom_crc32.h
